Align section items correctly on first breakpoint

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,1 +1,2 @@
-$main-breakpoint: 1200px;
+$first-breakpoint  : 800px;
+$second-breakpoint : 1200px;
